--- a/index.html
+++ b/index.html
@@ -403,6 +403,16 @@
                     </li>
                 </ul>
             </div>
+            <div>
+                <strong class="footer-subscribe">Подпишитесь на рассылку</strong>
+                <form class="subscribe-form">
+                    <input type="email" name="email" class="subscribe-form-input" placeholder="E-mail">
+                    <label class="subscribe-form-label"
+                    ></label>
+                    <button type="button" class="button-subscribe">Подписаться
+                    </button>
+                </form>
+            </div>
         </div>
 
         
