--- a/portfolio.html
+++ b/portfolio.html
@@ -279,6 +279,20 @@
                     </li>
                 </ul>
             </div>
+            <div class="fotter-form">
+                <strong class="footer-subscribe">Подпишитесь на рассылку</strong>
+                <form class="subscribe-form">
+                    <input type="email" name="email" class="subscribe-form-input" placeholder="E-mail">
+                    <label class="subscribe-form-label"></label>
+                    <span class="button-send">
+                        <button type="button" class="button-subscribe">Подписаться
+                        </button>
+                        <!-- <svg class="icon-icon-send" width="20" height="20">
+                                        <use href="./images/sprite.svg#icon-icon-send"></use>
+                                    </svg> -->
+                    </span>
+                </form>
+            </div>
         </div>
     
     
