--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                     ></textarea>
                 </label>
                 <input type="checkbox" class="modal-form-check visually-hidden"
-                id="user-policy" name="user_policy">
+                id="user-policy" name="user_policy" required>
                 <label for="user-policy" class="modal-form-check-desc">
                     Соглашаюсь с рассылкой и принимаю &nbsp;<a href="">Условия договора</a>
                 </label>
